2008-07-22  Nestor Salceda  <nestor.salceda@gmail.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: Remove the use
	Regexp, and use a HashSet<char> as Dan suggested.

2008-07-18  Nestor Salceda  <nestor.salceda@gmail.com>

	* ProvideCorrectArgumentsToFormattingMethodsRule.cs: New. Rule to check
	the correct fields passed to a formatting method.
	* Makefile.am: Add rule/test to the build.
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.

2008-07-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs: Fix typo in [Problem] as noted
	by Richard Birkby.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidConstructorsInStaticTypesRule.cs: Rework the rule to
	be more specific to 1.x code - where we want to the possibility 
	to instantiate "static" types by avoiding a visible default ctor.
	* Makefile.am: Fix typo that limited the number of tests being 
	built and executed.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewUseOfModuloOneOnIntegersRule.cs: Remove unused field 
	(self-test)

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs,
	* DoNotRoundIntegersRule.cs,
	* DontCompareWithNaNRule.cs,
	* FloatComparisonRule.cs: Deal with possible null values if
	resolving fails.
	* Makefile.am: Refactor to extract common stuff into new 
	../common.make file. Rebuild if the framework has changed.

2008-07-06  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentRule.cs: Simplify logic using the new 
	TraceBack rock.
	* ReviewSelfAssignmentRule.cs: New. Rule to check if a field
	or parameter is being assigned to itself (resulting in no change).
	* Gendarme.Rules.Correctness.mdp: Add rule to MD project file.
	* Makefile.am: Add new rule and tests to the build.

2008-06-27  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewUseOfInt64BitsToDoubleRule.cs: New. Rule to check if the
	BitConverter.Int64BitsToDouble is used in it's intended sense (i.e.