@@ -35,6 +35,7 @@ using Mono.Cecil;
 using Mono.Cecil.Cil;
 
 using Gendarme.Framework;
+using Gendarme.Framework.Rocks;
 
 namespace Gendarme.Rules.Correctness {
 
@@ -43,11 +44,14 @@ namespace Gendarme.Rules.Correctness {
 	public class BadRecursiveInvocationRule : Rule, IMethodRule {
 
 		// note: parameter names do not have to match because we can be calling a base class virtual method
-		private static bool CheckParameters (MethodReference caller, MethodReference callee)
+		private static bool CheckParameters (ParameterDefinitionCollection caller, ParameterDefinitionCollection callee)
 		{
-			for (int j = 0; j < callee.Parameters.Count; j++) {
-				ParameterDefinition p1 = (ParameterDefinition) callee.Parameters [j];
-				ParameterDefinition p2 = (ParameterDefinition) caller.Parameters [j];
+			if (caller.Count != callee.Count)
+				return false;
+
+			for (int j = 0; j < caller.Count; j++) {
+				ParameterDefinition p1 = (ParameterDefinition) callee [j];
+				ParameterDefinition p2 = (ParameterDefinition) caller [j];
 
 				if (p1.ParameterType.FullName != p2.ParameterType.FullName)
 					return false;
@@ -56,30 +60,43 @@ namespace Gendarme.Rules.Correctness {
 			return true;
 		}
 
-		private static bool CompareMethods (MethodReference method1, MethodReference method2, bool checkType)
+		private static bool CompareMethods (MethodReference method1, MethodReference method2, bool virtual_call)
 		{
 			if (method1 == null)
 				return (method2 == null);
 			if (method2 == null)
 				return false;
 
+			// shortcut, if it's not virtual then only compare metadata tokens
+			if (!virtual_call)
+				return (method1.MetadataToken == method2.MetadataToken);
+
 			// static or instance mismatch
 			if (method1.HasThis != method2.HasThis)
 				return false;
 
-			if (method1.Name != method2.Name)
+			// we could be implementing an interface (skip position 0 because of .ctor and .cctor)
+			bool explicit_interface = (method1.Name.IndexOf ('.') > 0);
+			if (!explicit_interface && (method1.Name != method2.Name))
 				return false;
 
-			if (checkType && (method1.DeclaringType.FullName != method2.DeclaringType.FullName))
+			// compare parameters
+			if (!CheckParameters (method1.Parameters, method2.Parameters))
 				return false;
 
-			if (method1.Parameters.Count != method2.Parameters.Count)
+			// return value may differ (e.g. if generics are used)
+			if (method1.ReturnType.ReturnType.FullName != method2.ReturnType.ReturnType.FullName)
 				return false;
 
-			if (!CheckParameters (method1, method2))
-				return false;
+			if (!explicit_interface && !method2.DeclaringType.Resolve ().IsInterface)
+				return true;
 
-			return true;
+			// we're calling into an interface and this could be us!
+			foreach (MethodReference mr in method1.Resolve ().Overrides) {
+				if (method2.DeclaringType.FullName == mr.DeclaringType.FullName)
+					return true;
+			}
+			return false;
 		}
 
 		private static bool CheckForEndlessRecursion (MethodDefinition method, int index)
@@ -105,7 +122,6 @@ namespace Gendarme.Rules.Correctness {
 			while (insn != null) {
 				switch (insn.OpCode.Code) {
 				case Code.Ldarg:
-					return ((int) insn.Operand == paramNum);
 				case Code.Ldarg_S:
 					ParameterDefinition param = (ParameterDefinition) insn.Operand;
 					return ((param.Sequence - 1) == paramNum);
@@ -143,19 +159,21 @@ namespace Gendarme.Rules.Correctness {
 			if (!method.HasBody)
 				return RuleResult.DoesNotApply;
 
-			foreach (Instruction ins in method.Body.Instructions) {
+			for (int i = 0; i < method.Body.Instructions.Count; i++) {
+				Instruction ins = method.Body.Instructions [i];
+
 				switch (ins.OpCode.FlowControl) {
 				case FlowControl.Call:
 					MethodReference callee = (ins.Operand as MethodReference);
 					// check type name only if the call isn't virtual
-					bool check_type = (ins.OpCode.Code != Code.Callvirt);
+					bool virtual_call = (ins.OpCode.Code == Code.Callvirt);
 					// continue scanning unless we're calling ourself
-					if (!CompareMethods (method, callee, check_type))
+					if (!CompareMethods (method, callee, virtual_call))
 						break;
 
 					// recursion detected! check if there a way out of it
-					if (CheckForEndlessRecursion (method, method.Body.Instructions.IndexOf (ins))) {
-						Runner.Report (method, ins, Severity.Critical, Confidence.High, String.Empty);
+					if (CheckForEndlessRecursion (method, i)) {
+						Runner.Report (method, ins, Severity.Critical, Confidence.High);
 						return RuleResult.Failure;
 					}
 					break;
@@ -167,6 +185,7 @@ namespace Gendarme.Rules.Correctness {
 				}
 			}
 
+			// should never be reached (since there's always a RET instruction)
 			return RuleResult.Success;
 		}
 	}
